--- a/package.json
+++ b/package.json
@@ -19,10 +19,9 @@
     "dev": "nodemon server/index.js"
   },
   "dependencies": {
-    "@fastify/cors": "^11.0.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "fastify": "^5.2.2",
+    "dotenv": "^16.4.7",
+    "express": "^5.0.1",
     "pg": "^8.14.1"
   },
   "devDependencies": {
