--- a/package.json
+++ b/package.json
@@ -23,8 +23,12 @@
     "dotenv": "^16.4.7",
     "express": "^5.0.1",
     "helmet": "^8.1.0",
+    "mobx": "^6.13.7",
+    "mobx-react": "^9.2.0",
     "morgan": "^1.10.0",
-    "pg": "^8.14.1"
+    "pg": "^8.14.1",
+    "preact": "^10.26.4",
+    "preact-router": "^4.1.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
