--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   },
   "license": "ISC",
   "author": "",
-  "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "start": "node server/index.js",
-    "dev": "nodemon server/index.js"
+    "server": "node server/index.js",
+    "server-watch": "nodemon server/index.js",
+    "client": "webpack serve --config client/webpack.config.js --mode development",
+    "build": "webpack --config client/webpack.config.js --mode  production"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -31,6 +32,15 @@
     "preact-router": "^4.1.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "@babel/core": "^7.26.10",
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-react": "^7.26.3",
+    "babel-loader": "^10.0.0",
+    "css-loader": "^7.1.2",
+    "nodemon": "^3.1.9",
+    "style-loader": "^4.0.0",
+    "webpack": "^5.98.0",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.1"
   }
 }
