--- a/package.json
+++ b/package.json
@@ -17,27 +17,30 @@
     "server": "node server/index.js",
     "server-watch": "nodemon server/index.js",
     "client": "webpack serve --config client/webpack.config.js --mode development",
-    "build": "webpack --config client/webpack.config.js --mode  production"
+    "build": "webpack --config client/webpack.config.js --mode development"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.0.1",
     "helmet": "^8.1.0",
-    "mobx": "^6.13.7",
-    "mobx-react": "^9.2.0",
     "morgan": "^1.10.0",
     "pg": "^8.14.1",
-    "preact": "^10.26.4",
     "preact-router": "^4.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.26.10",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-decorators": "^7.25.9",
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-react": "^7.26.3",
     "babel-loader": "^10.0.0",
     "css-loader": "^7.1.2",
+    "html-webpack-plugin": "^5.6.3",
+    "mobx": "^6.13.7",
+    "mobx-react-lite": "^4.1.0",
     "nodemon": "^3.1.9",
+    "preact": "^10.26.4",
     "style-loader": "^4.0.0",
     "webpack": "^5.98.0",
     "webpack-cli": "^6.0.1",
