--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "build": "webpack --config client/webpack.config.js --mode development"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.0.1",
