--- a/package.json
+++ b/package.json
@@ -27,7 +27,12 @@
     "helmet": "^8.1.0",
     "morgan": "^1.10.0",
     "pg": "^8.14.1",
-    "preact-iso": "^2.9.1"
+    "preact-iso": "^2.9.1",
+    "bootstrap": "^5.3.2",
+    "style-loader": "^3.3.3",
+    "css-loader": "^6.8.1",
+    "sass": "^1.69.5",
+    "sass-loader": "^13.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.26.10",
@@ -44,6 +49,7 @@
     "preact": "^10.26.4",
     "style-loader": "^4.0.0",
     "webpack": "^5.98.0",
+    "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.1"
   }
