--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.3",
     "mobx": "^6.13.7",
-    "mobx-react-lite": "^4.1.0",
+    "mobx-react": "^9.2.0",
     "nodemon": "^3.1.9",
     "preact": "^10.26.4",
     "style-loader": "^4.0.0",
