--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "server": "node server/index.js",
     "server-watch": "nodemon server/index.js",
     "client-watch": "webpack --watch --config client/webpack.config.js",
-    "build-dev": "webpack --config client/webpack.config.js"
+    "build-dev": "webpack --config client/webpack.config.js",
+    "db:migrate": "node db/scripts/runMigrations.js",
+    "db:seed": "node db/seeds/seedLearningData.js",
+    "db:setup": "npm run db:migrate && npm run db:seed"
   },
   "dependencies": {
     "axios": "^1.8.4",
